[tool.poetry]
name = "chatgpt-proxy-site"
version = "0.1.0"
description = ""
authors = ["Bazulenkov <anton.bazulenkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
openai = "^1.40.3"
streamlit-authenticator = "^0.3.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
